--- a/src/sass/site/template/_global.scss
+++ b/src/sass/site/template/_global.scss
@@ -1,3 +1,7 @@
+#page {
+    margin: 0 35px!important;
+}
+
 .full-width {
     width: 100%;
 }
